--- a/src/styles/BacheForm.module.css
+++ b/src/styles/BacheForm.module.css
@@ -6,7 +6,7 @@
   border: 1px solid #e5e7eb;
   border-radius: 12px;
   padding: 12px;
-  background: hsl(0, 50%, 48%); /* Color de fondo del formulario */
+  background: hwb(0 96% 2%); /* Color de fondo del formulario */
   margin-top: 10px;
   width: 100%;
   overflow: hidden;
